# kian_ai_0001

./: .gitignore  404.html  DRONE_AGENT_GUIDE.md  FIRST_RESPONSE_LATENCY.html  MAPPING_VIEW_FEATURE_PLAN.md  README.html  README.md  ROS2_DEBUG_NOTES.md  ROS2_NATIVE_HUMBLE_CHANGELOG.html  SLAM_WEB_VIEWER_DESIGN.html  WEB_UI_ARCHITECTURE_PLAN.html  background01.html  background02.html  background03.html  background04.html  code_reading_mentor.md  hashmap.json  main.py  requirements_local_agent.txt  requirements_no_pyqt.txt  requirements_no_sherpa.txt  test_audio.py  test_web_latency.py
android_webview/: README.md  settings.gradle.kts
assets/: FIRST_RESPONSE_LATENCY.md.triBcYjk.js  FIRST_RESPONSE_LATENCY.md.triBcYjk.lean.js  README.md.BZ17lhMY.js  README.md.BZ17lhMY.lean.js  ROS2_NATIVE_HUMBLE_CHANGELOG.md.De9ZwMdR.js  ROS2_NATIVE_HUMBLE_CHANGELOG.md.De9ZwMdR.lean.js  SLAM_WEB_VIEWER_DESIGN.md.DLxqMZ03.js  SLAM_WEB_VIEWER_DESIGN.md.DLxqMZ03.lean.js  WEB_UI_ARCHITECTURE_PLAN.md.Dib3bQxo.js  WEB_UI_ARCHITECTURE_PLAN.md.Dib3bQxo.lean.js  app.DAUWTCBY.js  background01.md.BPlEq-An.js  background01.md.BPlEq-An.lean.js  background02.md.C57CLdQg.js  background02.md.C57CLdQg.lean.js  background03.md.JovB7Aq3.js  background03.md.JovB7Aq3.lean.js  background04.md.DoAs1kUj.js  background04.md.DoAs1kUj.lean.js  style.Dg41bpQ-.css
config/: 60-cyclonedds.conf  README.md  config.example.json  cyclonedds.xml
project_markdown/: README.md  (+18 more)
ros2_ws/src/drone_task_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/drone_task_interfaces/msg/: GlobalPathWithGoal.msg  GoalWithType.msg
(+138 files in other folders)
