<?xml version="1.0"?>
<package format="3">
  <name>drone_task_interfaces</name>
  <version>0.1.0</version>
  <description>Shared ROS 2 task messages for Kian terminal and drone computers.</description>
  <maintainer email="isaac@example.com">isaac</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
